--- a/html-cv/CV.html
+++ b/html-cv/CV.html
@@ -88,6 +88,9 @@
         <i class="material-icons" style="font-size: 20px;">star_border</i>
         <i class="material-icons" style="font-size: 20px;">star_border</i>
         <i class="material-icons" style="font-size: 20px;">star_border</i></p>
+        <a href="https://github.com/koskte">
+          <img id="github" src="images/GitHub-Logo.png" class="img-thumbnail" style="margin-top:30px;" alt="GitHub">
+        </a>
       </div>
     </div>
   </div>
